make sure "visibility" is set

--- a/include/css/admin.scss
+++ b/include/css/admin.scss
@@ -54,7 +54,7 @@
 	}
 
 #gp_admin_html li{
-	list-style-image: none;
+	list-style: none;
 	background-image: none; /* ex: a bullet image for <li>, but it messes up ckeditor */
 	}
 
